<resources>
    <string name="app_name">Farmers Market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="SignIn">Sign in</string>
    <string name="SignUp">Sign up?</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_maps2">Map</string>
    <string name="button">sign_in_button</string>

    <string name="hint_email">Email</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email street</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="Login">Login</string>
    <string name="next_button">Next</string>
    <string name="price_text">%1$s</string>
    <string name="underLinedLocation">&lt;u>%1$s&lt;/u></string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Submit</string>>
    <string name="facebook_app_id">2167996916557134</string>
    <string name="fb_login_protocol_scheme">fb2167996916557134</string>

</resources>
